# gtk-hellopackaging

./: LICENSE  meson.build
data/: helloagain.desktop.in  helloagain.metainfo.xml.in  helloagain.metainfo.xml.in~
po/: LINGUAS  POTFILES  com.github.hannusoini.gtk-helloagain.pot  de.po  es.po  fi.po
src/: Application  Application.vala  Application.vala~
